try to fix differencies on ios

--- a/frontend/src/Components/Pages/HomePage/HomePage.scss
+++ b/frontend/src/Components/Pages/HomePage/HomePage.scss
@@ -34,7 +34,6 @@ $tablet-st: 1.5;
    display: grid;
    grid-template-columns: repeat(12, 90px);
    gap: 25px;
-   justify-content: center;
 
    background-image: url('../../../../public/images/FrameNet\(1\).svg');
    background-position: top center;
